# tap-chorusai

./: LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
tap_chorusai/: client.py  streams.py  tap.py
tap_chorusai/tests/: __init__.py  test_core.py
