[tool.poetry]
name = "tap-chorusai"
version = "0.0.9"
description = "`tap-chorusai` is a Singer tap for Chorus.ai, built with the Meltano SDK for Singer Taps."
authors = ["Andy O'Neal"]
keywords = [
    "ELT",
    "Chorus.ai",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.4.4"
pychorusai = { git = "https://github.com/andyoneal/pychorusai.git", branch = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
pychorusai = { git = "https://github.com/andyoneal/pychorusai.git", branch = "main"}

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_chorusai"

[build-system]
requires = ["poetry-core]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-chorusai = 'tap_chorusai.tap:TapChorusai.cli'
